[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
trees = "0.4.2"
slab_tree = "0.3.2"
ego-tree = "0.6.2"
id_tree = "1.8.0"
regex = "1.7.0"
num-bigint = "0.4.3"
num-traits = "0.2.15"
indicatif = "0.17.2"
